--- a/src/app/product-feature-banner/product-feature-banner.component.css
+++ b/src/app/product-feature-banner/product-feature-banner.component.css
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   align-items: center;
   aspect-ratio: 1;
-  width: 100vw;
+  width: 100%;
 }
 
 .image-wrapper {
